# scam-detector

./: .env.example  .gitignore  Cargo.toml  README.md
src/: .env  config.rs  error.rs  main.rs  server.rs
src/controller/: health.rs  hf_controller.rs  mod.rs
src/domain/: models.rs
src/repository/: hugging_face_repo.rs  mod.rs
src/service/: health_service.rs  hf_service.rs  mod.rs  service_registry.rs
src/utils/: process.rs
