[package]
name = "scam-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
axum = "0.7.2"
axum-extra = "0.9.0"
axum-macros = "0.4.0"
clap = { version = "4.0.8", features = ["derive", "env"] }
chrono = { version = "0.4",features = ["serde"] }
hmac = "0.12.1"
http = "0.2.11"
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", features = ["json", "serde_json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.38"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "util"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = [
    "auth",
    "compression-gzip",
    "cors",
] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
uuid = { version = "1.7.0", features = ["v4"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.77"
dotenv = "0.15.0"
